# my-testframework

./: .gitignore  README.md  agents.md  push-all.ps1
docs/: MariaDBMySQL执行历史存档-设计方案.md  MariaDB执行历史存档-部署与验证手册.md  NodeLegacy服务端-冻结规则与回退指南.md  QAMCP-Agent工具使用指南.md  RegisterServer-服务端API与WebSocket协议.md  RustServer-后续优化Todo.md  UnityClient-接入QaTest与运行时行为.md  WebSocket状态收敛-断线超时锁与LateResult.md  发布检查清单-构建验证与冒烟.md  发布版本矩阵-仓库Commit与协议版本.md  变更记录-项目治理与文档调整.md  快速开始-本地跑通QA链路.md  示例-兑换活动完整链路ScenarioIntent.md  能力边界-已支持与暂不支持.md  运行指南-启动构建与本地联调.md  配置参考-端口超时鉴权与执行限制.md  项目总览-架构流程与后续计划.md
docs/archive/: 历史归档-原始三端需求.md
qamcp/: .gitignore  Cargo.toml  README.md  package.json
qamcp/scripts/: build-release.ps1
qamcp/src/: config.rs  constants.rs  main.rs  mcp.rs
qamcp/src/cli/: mod.rs  output.rs  parser.rs
qamcp/src/qa/: api.rs  artifacts.rs  mod.rs  ws.rs
registerserver/: .gitignore  README.md  build-release.ps1  install-scheduled-task.ps1
registerserver/client/: index.html  package-lock.json  package.json  vite.config.js
registerserver/client/src/: App.vue  main.js  styles.css
registerserver/rustserver/: .env.example  Cargo.toml  README.md
registerserver/rustserver/src/: api.rs  artifacts.rs  auth.rs  clients.rs  config.rs  execution.rs  heartbeat.rs  logging.rs  main.rs  messaging.rs  network_access.rs  sequence.rs  state.rs  static_files.rs  util.rs  websocket.rs
registerserver/rustserver/src/archive/: mod.rs
registerserver/server/: README.md  package-lock.json  package.json
registerserver/server/src/: index.js
tests/: test.txt
(+32 files in other folders)
